# llm-trace-hub

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_project_active.py  0003_project_key_activated.py  0004_project_current_api_key.py
backend/app/: main.py
backend/app/api/: cases.py  decisions.py  deps.py  evals.py  ingest.py  policies.py  projects.py  traces.py
backend/app/core/: config.py
backend/app/judge/: registry.py
backend/app/judge/providers/: base.py  heuristic.py  llm.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: case.py  common.py  decision.py  eval.py  ingest.py  policy.py  project.py  trace.py
backend/app/services/: case_service.py  decision_service.py  eval_service.py  policy_engine.py  policy_service.py  project_service.py  trace_service.py  utils.py
backend/scripts/: seed.py
docs/: ARCHITECTURE.md
examples/: _env.py  send_langgraph_complex_via_sdk.py  send_langgraph_trace_via_sdk.py  send_trace_via_api.py  send_trace_via_sdk.py
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/api/admin/: _utils.js
frontend/app/cases/: page.js
frontend/app/cases/[caseId]/: page.js
frontend/app/projects/: page.js
frontend/components/: api.js  case-actions.js  langgraph-graph.js  live-refresh-shell.js  project-admin-actions.js  project-create-form.js  project-tabs.js
sdk/python/: pyproject.toml
sdk/python/llm_trace_hub/: __init__.py  client.py
(+11 files in other folders)
